--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <!-- Meta -->
-   <meta charset='UTF-8'>
-   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-   <meta name='apple-mobile-web-app-capable' content='yes'>
-   <meta content='yes' name='apple-touch-fullscreen' />
-   <meta name='apple-mobile-web-app-status-bar-style' content='black'>
-   <meta name='mssmarttagspreventparsing' content='true'>
-   <meta name='yandex-verification' content='38ffc5af88a5d596'>
-   <meta name='google-site-verification' content='8porN1DgQJZZs7RTNJO_O0OTJG6d3swz6xW0bXPfXVc'>
-   <meta name='robots' content='index, follow'>
-   <meta name='author' content='Oliynyk Artem'>
-   <meta name='description' content='Page was made by Artem Oliynyk Page was made by Artem Oliynyk Page was made by Artem Oliynyk Page was made by Artem Oliynyk Page was made by Artem Oliynyk Page was made by Artem Oliynyk'>
-   <!-- Fonts -->
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&family=Open+Sans:wght@800&family=Roboto&family=Rubik&family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
-   <!-- css -->
-   <link rel='stylesheet' crossorigin='anonymous' href='https://www.unpkg.com/swiper/swiper-bundle.min.css'>
-   <link rel='stylesheet' crossorigin='use-credentials' href='css/style.min.css'>
-   <!-- Favicon -->
-   <link rel='apple-touch-icon' sizes='180x180' href='img/favicon/apple-touch-icon.png'>
-   <link rel='icon' type='image/png' sizes='32x32' href='img/favicon/favicon-32x32.png'>
-   <link rel='icon' type='image/png' sizes='16x16' href='img/favicon/favicon-16x16.png'>
-   <!-- Title -->
-   <title>Find all your favorite Pokemon</title>
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D6YKFPCS0C"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-D6YKFPCS0C');
-</script>
-</head>
+   <head>
+      <!-- Meta -->
+      <meta charset='UTF-8'>
+      <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+      <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+      <meta name='robots' content='index, follow'>
+      <meta name='author' content='Oliynyk Artem'>
+      <meta name='description' content='Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus cum quam quis? Adipisci molestiae numquam, ea quasi saepe placeat vel error ab quos obcaecati nulla illo. Dolore, a unde.'>
+      <!-- Opengraph -->
+      <meta property='og:title' content='800 Pokemons for you to choose your favorite' />
+      <meta property='og:description' content='Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus possimus cum quam quis? Adipisci molestiae numquam, ea quasi saepe placeat vel error ab quos obcaecati nulla illo. Dolore, a unde.' />
+      <meta property='og:type' content='website' />
+      <meta property='og:url' content='' />
+      <meta property='og:image' content='img/favicon/apple-touch-icon.webp' />
+      <!-- css -->
+      <link rel='stylesheet' crossorigin='anonymous' href='css/swiper-bundle.min.css'>
+      <link rel='stylesheet' crossorigin='use-credentials' href='css/style.min.css'>
+       <!-- Favicon -->
+       <link rel='apple-touch-icon' sizes='180x180' href='img/favicon/apple-touch-icon.webp' />
+       <link rel='icon' type='image/png' sizes='32x32' href='img/favicon/favicon-32x32.webp' />
+       <link rel='icon' type='image/png' sizes='16x16' href='img/favicon/favicon-16x16.webp' />
+       <link rel='manifest' href='img/favicon/site.webmanifest' />
+        <meta name='msapplication-TileColor' content='#da532c' />
+       <meta name='theme-color' content='#ffffff' />
+      <!-- Title -->
+      <title>800 Pokemons for you to choose your favorite</title>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-YLV8MEQX59"></script>
+   </head>
 <body class="body__home body__burger">
       <header>
          <nav class="js-scroll slide-in-top">
@@ -69,7 +61,7 @@
             <a href="pokedex.html" class="start__btn">See pokemons</a>
          </div>
          <div class="start__item second-item js-scroll slide-in-right">
-            <img src="img/start_imgTablet.png" data-src="img/start_imgTablet.webp" data-srcset="img/start_imgTablet.webp" class="start__img" loading="lazy" alt="">
+            <img src="img/start_imgTablet.webp" class="start__img"  alt="">
          </div>
       </div>
    </div>
@@ -85,7 +77,7 @@
    </div>
 </footer>
 <!-- JS -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.1.4/swiper-bundle.min.js" integrity="sha512-hNnjFWCqifslGhuZJVHjXdBund00oDV71mBacLyZYVwmuf+Lx+MGgoG04wehsvhp6FvLYfycrES+b1yh24yvhg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="js/swiper-bundle.min.js"></script>
 <script src="js/main.min.js"></script>
 </body>
 </html>
